compiler/testData/diagnostics/tests/suppress/oneWarning/onClassObject.kt
class C {
    suppress("REDUNDANT_NULLABLE")
    class object {
        val foo: String?? = null <!USELESS_CAST!>as<!> Nothing??
    }
}